objects/rrde__RRD_Teams__c.object
<CustomObject>
    <description>To track the information of Team</description>
    <fields>
        <fullName>rrde__All_Criteria__c</fullName>
        <description>Combination of lead and case criteria</description>
        <formula>rrde__Case_Criteria__c &amp; &apos; &apos; &amp;   IF( rrde__OtherState__c == &apos;&apos;,rrde__Lead_Criteria__c, rrde__Lead_Criteria_if_other_State__c)</formula>
        <inlineHelpText>Combination of lead and case criteria</inlineHelpText>
        <label>All Criteria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Allowed_Number_of_Open_Cases__c</fullName>
        <label>Allowed Number of Open Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rrde__Assigned_records_current_cycle__c</fullName>
        <description>Record assign to a team in the current cycle.</description>
        <inlineHelpText>Record assign to a team in the current cycle.</inlineHelpText>
        <label>Assigned records in current cycle</label>
        <summarizedField>rrde__Round_Robin_Users__c.rrde__Assigned_records_current_cycle__c</summarizedField>
        <summaryForeignKey>rrde__Round_Robin_Users__c.rrde__Team__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rrde__Case_Criteria__c</fullName>
        <formula>&quot;Case Origin:&quot; &amp; rrde__Case_Origin__c &amp; &quot;;&quot; &amp; &quot;Case Reason:&quot; &amp; rrde__Case_Reason__c</formula>
        <label>Case Criteria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Case_Origin__c</fullName>
        <description>Use to capture the case origin 
(Gul)</description>
        <inlineHelpText>Use to capture the case origin</inlineHelpText>
        <label>Case Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Case_Reason__c</fullName>
        <description>Use to capture the case reason 
(Gul)</description>
        <inlineHelpText>Use to capture the case reason</inlineHelpText>
        <label>Case Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Country__c</fullName>
        <description>Controlling Picklist to State</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Autralia</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rrde__Criteria_Logic_Complete__c</fullName>
        <label>Criteria Logic Complete</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rrde__Criteria_Logic__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Criteria Logic</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Default_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account will be assigned to this user if maximum intake capacity exceeds or users are offline when only online users are to be assigned</description>
        <inlineHelpText>Account will be assigned to this user if maximum intake capacity exceeds or users are offline when only online users are to be assigned</inlineHelpText>
        <label>Default Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Step_2_Define_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rrde__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Lead_Criteria_Abbreviation__c</fullName>
        <formula>&quot;Lead Source:&quot; &amp; rrde__Lead_Source__c &amp; &quot;;&quot;&amp; &quot;State:&quot; &amp; RIGHT( TEXT( rrde__States__c) , 2) &amp; &quot;;&quot;&amp; &quot;Lead Zip/Postal Code:&quot; &amp; rrde__Lead_Zip_Postal_Code__c</formula>
        <label>Lead Criteria Abbreviation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Lead_Criteria__c</fullName>
        <formula>&quot;Lead Source:&quot; &amp; rrde__Lead_Source__c &amp; &quot;;&quot;&amp; &quot;State:&quot; &amp; LEFT(TEXT( rrde__States__c),LEN(TEXT( rrde__States__c))-3)&amp; &quot;;&quot;&amp; &quot;Lead Zip/Postal Code:&quot; &amp; rrde__Lead_Zip_Postal_Code__c</formula>
        <label>Lead Criteria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Lead_Criteria_if_other_State__c</fullName>
        <formula>&quot;Lead Source:&quot; &amp; rrde__Lead_Source__c &amp; &quot;;&quot;&amp; &quot;State:&quot; &amp; rrde__OtherState__c &amp; &quot;;&quot;&amp; &quot;Lead Zip/Postal Code:&quot; &amp; rrde__Lead_Zip_Postal_Code__c</formula>
        <label>Lead Criteria if other State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Lead_Source__c</fullName>
        <inlineHelpText>Enter the lead source from where the lead is captured</inlineHelpText>
        <label>Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Lead_Zip_Postal_Code__c</fullName>
        <description>Enter Zip Code</description>
        <inlineHelpText>Enter Zip Code</inlineHelpText>
        <label>Lead Zip/Postal Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Maximum_limit_in_current_cycle__c</fullName>
        <description>This value defines the maximum number of records a team can be assigned which is set to unlimited when left blank</description>
        <inlineHelpText>This value defines the maximum number of records a team can be assigned which is set to unlimited when left blank</inlineHelpText>
        <label>Maximum Intake limit in current cycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rrde__OtherState__c</fullName>
        <description>It is Mandatory whenever Country value is Other</description>
        <label>Other State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Priority_Order__c</fullName>
        <description>Please enter any Number or Decimal Number to set the priority of this Team Criteria, To see existing order click on Criteria Priority Order Tab</description>
        <inlineHelpText>Please enter any Number or Decimal Number to set the priority of this Team Criteria, To see existing order click on Criteria Priority Order Tab</inlineHelpText>
        <label>Priority Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rrde__Queue_Id__c</fullName>
        <label>Queue Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Queue_Name__c</fullName>
        <label>Queue Name</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rrde__Record_assign_Limit__c</fullName>
        <description>Max number of record assign to a team.</description>
        <inlineHelpText>Max number of record assign to a team.</inlineHelpText>
        <label>Record assign Limit (Users limit Sum)</label>
        <summarizedField>rrde__Round_Robin_Users__c.rrde__Record_assign_limit__c</summarizedField>
        <summaryForeignKey>rrde__Round_Robin_Users__c.rrde__Team__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rrde__States__c</fullName>
        <description>USA States</description>
        <label>States/Territories</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>rrde__Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama-AL</fullName>
                </value>
                <value>
                    <fullName>Alaska-AK</fullName>
                </value>
                <value>
                    <fullName>Arizona-AZ</fullName>
                </value>
                <value>
                    <fullName>Arkansas-AR</fullName>
                </value>
                <value>
                    <fullName>California-CA</fullName>
                </value>
                <value>
                    <fullName>Colorado-CO</fullName>
                </value>
                <value>
                    <fullName>Connecticut-CT</fullName>
                </value>
                <value>
                    <fullName>Delaware-DE</fullName>
                </value>
                <value>
                    <fullName>Florida-FL</fullName>
                </value>
                <value>
                    <fullName>Georgia-GA</fullName>
                </value>
                <value>
                    <fullName>Hawaii-HI</fullName>
                </value>
                <value>
                    <fullName>Idaho-ID</fullName>
                </value>
                <value>
                    <fullName>Illinois-IL</fullName>
                </value>
                <value>
                    <fullName>Indiana-IN</fullName>
                </value>
                <value>
                    <fullName>Iowa-LA</fullName>
                </value>
                <value>
                    <fullName>Kansas-KS</fullName>
                </value>
                <value>
                    <fullName>Kentucky-KY</fullName>
                </value>
                <value>
                    <fullName>Louisiana-LA</fullName>
                </value>
                <value>
                    <fullName>Maine-ME</fullName>
                </value>
                <value>
                    <fullName>Maryland-MD</fullName>
                </value>
                <value>
                    <fullName>Massachusetts-MA</fullName>
                </value>
                <value>
                    <fullName>Michigan-MI</fullName>
                </value>
                <value>
                    <fullName>Minnesota-MN</fullName>
                </value>
                <value>
                    <fullName>Mississippi-MS</fullName>
                </value>
                <value>
                    <fullName>Missouri-MO</fullName>
                </value>
                <value>
                    <fullName>Montana-MT</fullName>
                </value>
                <value>
                    <fullName>Nebraska-NE</fullName>
                </value>
                <value>
                    <fullName>Nevada-NV</fullName>
                </value>
                <value>
                    <fullName>New Hampshire-NH</fullName>
                </value>
                <value>
                    <fullName>New Jersey-NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rrde__Team_Name__c</fullName>
        <description>Define a unique team name</description>
        <inlineHelpText>Define a unique team name</inlineHelpText>
        <label>Team Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rrde__To_be_assigned_no_of_Records__c</fullName>
        <formula>IF( isblank(rrde__Allowed_Number_of_Open_Cases__c) , 
rrde__Maximum_limit_in_current_cycle__c  -  rrde__Assigned_records_current_cycle__c,

IF((rrde__Allowed_Number_of_Open_Cases__c -  rrde__Total_Assigned_Cases__c )&gt;=
(rrde__Maximum_limit_in_current_cycle__c  -  rrde__Assigned_records_current_cycle__c),
rrde__Maximum_limit_in_current_cycle__c  -  rrde__Assigned_records_current_cycle__c,
rrde__Allowed_Number_of_Open_Cases__c -  rrde__Total_Assigned_Cases__c
))</formula>
        <label>To be assigned no of Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rrde__Total_Assigned_Cases__c</fullName>
        <label>Total Assigned Cases</label>
        <summarizedField>rrde__Round_Robin_Users__c.rrde__Total_Assigned_Cases__c</summarizedField>
        <summaryForeignKey>rrde__Round_Robin_Users__c.rrde__Team__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rrde__Total_RR_users_with_Max_value__c</fullName>
        <description>Users with maximum value</description>
        <inlineHelpText>Users with maximum value</inlineHelpText>
        <label>Total RR users with Intake value</label>
        <summaryFilterItems>
            <field>rrde__Round_Robin_Users__c.rrde__Record_assign_limit__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>rrde__Round_Robin_Users__c.rrde__Team__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rrde__Total_RR_users_without_Max_value__c</fullName>
        <description>Total RR user with out max value</description>
        <inlineHelpText>Total RR user with out max value</inlineHelpText>
        <label>Total RR users without Intake value</label>
        <summaryFilterItems>
            <field>rrde__Round_Robin_Users__c.rrde__Record_assign_limit__c</field>
            <operation>lessThan</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>rrde__Round_Robin_Users__c.rrde__Team__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rrde__Total_number_of_users__c</fullName>
        <description>Count the total number of users</description>
        <inlineHelpText>Count the total number of users</inlineHelpText>
        <label>Total number of RR users</label>
        <summaryForeignKey>rrde__Round_Robin_Users__c.rrde__Team__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rrde__Unique_Criteria__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field get populated from all criteria field through workflow</description>
        <label>Unique Criteria</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rrde__isNotRestricted__c</fullName>
        <description>To check if the team already has the maximum number of open cases allowed</description>
        <formula>IF(ISBLANK( rrde__Allowed_Number_of_Open_Cases__c), true, 

IF( rrde__Allowed_Number_of_Open_Cases__c &gt;  rrde__Total_Assigned_Cases__c , true, false)
)</formula>
        <label>isNotRestricted</label>
        <type>Checkbox</type>
    </fields>
    <label>Team</label>
    <listViews>
        <fullName>rrde__All</fullName>
        <columns>NAME</columns>
        <columns>rrde__Team_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>rrde__Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RRDT-{0000}</displayFormat>
        <label>RRD Team Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Step 2-Define Teams</pluralLabel>
    <recordTypes>
        <fullName>rrde__Account_Criteria</fullName>
        <active>true</active>
        <description>Define team to set criteria for Accounts</description>
        <label>Account Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>rrde__Case_Criteria</fullName>
        <active>true</active>
        <description>Define Team to set a Criteria for Case</description>
        <label>Case Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>rrde__Lead_Criteria</fullName>
        <active>true</active>
        <description>Define Team to set a Criteria for Lead</description>
        <label>Lead Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>rrde__Lead_Queue</fullName>
        <active>true</active>
        <description>This record type will be assigned for teams with queues.</description>
        <label>Lead Queue</label>
    </recordTypes>
    <recordTypes>
        <fullName>rrde__Opportunity_Criteria</fullName>
        <active>true</active>
        <description>Define team to set criteria for Opportunities</description>
        <label>Opportunity Criteria</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rrde__Country_State_Validation</fullName>
        <active>false</active>
        <description>Other State is required if Country is other than USA,  if Country is USA, State is requried  and Other state should be blank.</description>
        <errorConditionFormula>IF(ISPICKVAL(rrde__Country__c,&quot;&quot;),false,( OR(AND(ISPICKVAL(rrde__Country__c,&quot;USA&quot;),NOT(ISBLANK(rrde__OtherState__c )|| (rrde__OtherState__c == &apos;N/A&apos;) ),RecordType.Name=&quot;Lead Criteria&quot;),AND(NOT(ISPICKVAL(rrde__Country__c ,&quot;USA&quot;)),ISBLANK(rrde__OtherState__c) || rrde__OtherState__c == &apos;N/A&apos;,RecordType.Name=&quot;Lead Criteria&quot;))))</errorConditionFormula>
        <errorMessage>Other State is required if Country is other than USA,  if Country is USA, State is requried  and Other state should be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rrde__NoNegativeValues</fullName>
        <active>true</active>
        <errorConditionFormula>rrde__Priority_Order__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>rrde__Priority_Order__c</errorDisplayField>
        <errorMessage>Priority order must be greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rrde__Record_assign_limit</fullName>
        <active>true</active>
        <errorConditionFormula>rrde__Maximum_limit_in_current_cycle__c ==0  ||   rrde__Allowed_Number_of_Open_Cases__c &lt;   rrde__Total_Assigned_Cases__c ||
rrde__Maximum_limit_in_current_cycle__c &lt;
rrde__Assigned_records_current_cycle__c</errorConditionFormula>
        <errorDisplayField>rrde__Maximum_limit_in_current_cycle__c</errorDisplayField>
        <errorMessage>Record assign limit should be greater than 0 and the number of assigned records in the current cycle.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rrde__Valid_Zip_Code</fullName>
        <active>false</active>
        <description>It is use to check weather the Zip code is valid and contain only 5 or 6 numeric</description>
        <errorConditionFormula>OR(LEN( rrde__Lead_Zip_Postal_Code__c ) &lt;5, NOT(ISNUMBER( rrde__Lead_Zip_Postal_Code__c )) ) &amp;&amp; rrde__Lead_Zip_Postal_Code__c &lt;&gt; &apos;&apos;</errorConditionFormula>
        <errorDisplayField>rrde__Lead_Zip_Postal_Code__c</errorDisplayField>
        <errorMessage>Invalid Zip code</errorMessage>
    </validationRules>
</CustomObject>